Code cleanup: - Remove calls to deprecated methods - Add generics to collections