@@ -96,7 +96,7 @@ public class SpellFindCaptchaFactory extends SoundCaptchaFactory {
         StringBuffer response = new StringBuffer();
         for (int i = 0; i < length; i++) {
             //get a new word
-            String word = this.wordGenerator.getWord(new Integer(getRandomLength().intValue()), locale);
+            String word = this.wordGenerator.getWord(Integer.valueOf(getRandomLength().intValue()), locale);
             //add it to collection and add its position
             int position = Math.abs(myRandom.nextInt() % word.length());
             //append to challenge
@@ -132,7 +132,7 @@ public class SpellFindCaptchaFactory extends SoundCaptchaFactory {
         int range = getWordToSound().getMaxAcceptedWordLength()
                 - getWordToSound().getMinAcceptedWordLength();
         int randomRange = range != 0 ? myRandom.nextInt(range + 1) : 0;
-        wordLength = new Integer(randomRange + getWordToSound().getMinAcceptedWordLength());
+        wordLength = Integer.valueOf(randomRange + getWordToSound().getMinAcceptedWordLength());
         return wordLength;
     }
 
