@@ -41,12 +41,12 @@ import com.octo.captcha.component.image.textpaster.GlyphsPaster;
 public class ComposedWordToImageTest extends TestCase {
 
     private ComposedWordToImage composedWordToImage;
-    private Integer minAcceptedWordLength = new Integer(1);
-    private Integer maxAcceptedWordLength = new Integer(10);
-    private Integer imageHeight = new Integer(100);
-    private Integer imageWidth = new Integer(100);
-    private Integer minFontSize = new Integer(10);
-    private Integer maxFontSize = new Integer(12);
+    private Integer minAcceptedWordLength = Integer.valueOf(1);
+    private Integer maxAcceptedWordLength = Integer.valueOf(10);
+    private Integer imageHeight = Integer.valueOf(100);
+    private Integer imageWidth = Integer.valueOf(100);
+    private Integer minFontSize = Integer.valueOf(10);
+    private Integer maxFontSize = Integer.valueOf(12);
 
     /**
      * Constructor for ComposedWordToImageTest.
