@@ -36,7 +36,7 @@ public class DictionaryWordGeneratorTest extends TestCase {
     private DictionaryWordGenerator dictionaryWordGenerator;
     private static String[] wordlist = {"1", "1234", "123456", "123456789", "123"};
     private static int[] lengths = {1, 4, 6, 9, 3};
-    private static Integer UNKNOWN_LENGTH = new Integer(100);
+    private static Integer UNKNOWN_LENGTH = Integer.valueOf(100);
 
     public void setUp() {
         this.dictionaryWordGenerator = new DictionaryWordGenerator(new ArrayDictionary(wordlist));
@@ -44,7 +44,7 @@ public class DictionaryWordGeneratorTest extends TestCase {
 
     public void testGetWordInteger() {
         for (int i = 0; i < lengths.length; i++) {
-            Integer length = new Integer(lengths[i]);
+            Integer length = Integer.valueOf(lengths[i]);
             String test = this.dictionaryWordGenerator.getWord(length);
             assertNotNull(test);
             assertTrue(test.length() > 0);
@@ -61,7 +61,7 @@ public class DictionaryWordGeneratorTest extends TestCase {
 
     public void testGetWordIntegerLocale() {
         for (int i = 0; i < lengths.length; i++) {
-            Integer length = new Integer(lengths[i]);
+            Integer length = Integer.valueOf(lengths[i]);
             String test = this.dictionaryWordGenerator.getWord(length, Locale.US);
             assertNotNull(test);
             assertTrue(test.length() > 0);
