@@ -40,19 +40,19 @@ public class DummyWordGeneratorTest extends TestCase {
     public void testGetDefaultWord() {
         this.dummyWordGenerator = new DummyWordGenerator(null);
         String expected = this.expectedString;
-        String word = this.dummyWordGenerator.getWord(new Integer(8));
+        String word = this.dummyWordGenerator.getWord(Integer.valueOf(8));
         assertEquals(expected, word);
     }
 
     public void testGetWordInteger() {
         String expected = this.expectedString;
-        String word = this.dummyWordGenerator.getWord(new Integer(10));
+        String word = this.dummyWordGenerator.getWord(Integer.valueOf(10));
         assertEquals(expected + expected.substring(0, 2), word);
     }
 
     public void testGetWordIntegerLocale() {
         String expected = this.expectedString;
-        String word = this.dummyWordGenerator.getWord(new Integer(10), Locale.US);
+        String word = this.dummyWordGenerator.getWord(Integer.valueOf(10), Locale.US);
         assertEquals(expected + expected.substring(0, 2), word);
     }
 
